--- a/config.json
+++ b/config.json
@@ -5,24 +5,24 @@
 		{
 			"ID": "whoami",
 			"Name": "Who am I?",
-			"Command": "whoami"
+			"Cmd": "whoami"
 		},
 		{
 			"ID": "ls",
 			"Name": "ls -lh $(pwd)",
-			"Command": "ls",
+			"Cmd": "ls",
 			"Args": [ "-l", "-h" ]
 		},
 		{
 			"ID": "cpuinfo",
 			"Name": "CPU Info",
-			"Command": "cat",
+			"Cmd": "cat",
 			"Args": [ "/proc/cpuinfo" ]
 		},
 		{
 			"ID": "sleep-n-echo",
 			"Name": "sleep 2 && echo Hello, web!",
-			"Command": "/bin/sh",
+			"Cmd": "/bin/sh",
 			"Args": [ "-c", "sleep 2 && echo Hello, web! && sleep 2 && echo Hello, world!" ]
 		}
 	]
