Add task that always fails

--- a/config.json
+++ b/config.json
@@ -8,6 +8,11 @@
 			"Cmd": "whoami"
 		},
 		{
+			"ID": "fail",
+			"Name": "Fail Task",
+			"Cmd": "false"
+		},
+		{
 			"ID": "ls",
 			"Name": "ls -lh $(pwd)",
 			"Cmd": "ls",
